# BaxterDualManipulatorBlockAssembly

./: README.md  baxter.sh
assembly_movement/: CMakeLists.txt  setup.py
assembly_movement/msg/: Position.msg
assembly_movement/scripts/: go_to_neutral.py
assembly_movement/srv/: ToPosition.srv~
barrett_hand/bhand_controller/launch/: bhand_controller.launch~
install/: setup.sh
install/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  CameraSettings.h  CloseCameraRequest.h  CloseCameraResponse.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndEffectorCommand.h  EndEffectorProperties.h  EndEffectorState.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  JointCommand.h  ListCamerasRequest.h  ListCamerasResponse.h  NavigatorState.h  NavigatorStates.h  OpenCameraRequest.h  OpenCameraResponse.h  RobustControllerStatus.h  SEAJointState.h  SolvePositionIKRequest.h  SolvePositionIKResponse.h  URDFConfiguration.h
install/include/baxter_maintenance_msgs/: CalibrateArmData.h  CalibrateArmEnable.h  TareData.h  TareEnable.h  (+3 more)
launch/: grippers_movement_sensors_nodes.launch  positions_for_movment.txt
netft_utils/launch/: netft_view.launch~
robotiq/: CMakeLists.txt  CMakeLists.txt~  package.xml~  setup.py
robotiq/msg/: Service.msg
src/assembly_movement/: CMakeLists.txt~  package.xml  package.xml~  positions_for_basic_movment.txt  positions_for_basic_movment.txt~
src/robotiq/: package.xml
(+16 files in other folders)
